# Atrium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  wrangler.jsonc
.github/workflows/: ci-tests.yml  deploy-worker.yml  release-docker.yml
.wrangler/cache/: wrangler-account.json
deploy/worker/: test_init.sql  wrangler.test.toml.template  wrangler.toml
docs/: design.md  e2e-testing.md  native-api-and-auth.md
migrations/: 0001_initial_schema.sql  0002_multi_provider_auth.sql  0003_repo_owner_identity.sql  0004_issue_slug.sql  0005_account_provider.sql  0006_native_comment_model.sql  0007_discovery.sql  0008_user_display_name.sql  0009_query_performance_indexes.sql
scripts/: deploy.py  test-worker.ts  test.py
src/: account-auth.ts  auth.rs  cache.rs  cookies.rs  db.rs  db.ts  discovery-guide.ts  discovery.ts  error.rs  error.ts  index.ts  jwks.rs  jwt.rs  lib.rs  markdown.rs  router.rs  services.ts  types.rs  types.ts  utils.ts
src/fmt/: api.rs  comment.rs  issue.rs  mod.rs  pagination.rs  user.rs
src/handlers/: comments.rs  exports.rs  issues.rs  labels.rs  mod.rs  reactions.rs  search.rs  utterances.rs
src/handlers/api/: admin.rs  auth.rs  comments.rs  export.rs  labels.rs  mod.rs  native.rs  reactions.rs  threads.rs
src/jwks/: cache.rs  mod.rs  parts.rs  signature.rs  tests.rs
src/platform/: mod.rs
src/platform/server/: cache.rs  http.rs  mod.rs  routes.rs  sqlite.rs
src/platform/worker/: d1.rs  http.rs  mod.rs  routes.rs
src/services/: auth.rs  comment.rs  cursor.rs  exports.rs  issue.rs  label.rs  mod.rs  native.rs  reaction.rs  repo.rs  search.rs  session.rs
src/services/native/: auth.rs  comments.rs  discovery.rs  mod.rs  site.rs
tests/common/: fixtures.rs  mod.rs
tests/e2e/: compat_comments.rs  compat_issues.rs  compat_labels.rs  compat_misc.rs  compat_reactions.rs  compat_search.rs  mod.rs  native_admin.rs  native_auth.rs  native_comments.rs  native_export.rs  native_labels.rs  native_reactions.rs  native_site.rs  native_threads.rs
tests/unit/: account-auth.test.ts  discovery.test.ts  services.test.ts  utils.test.ts
tests/worker/: e2e.test.ts
