[package]
name = "xtalk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "xtalk-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
default = []
worker = ["dep:worker"]
server = ["dep:axum", "dep:sqlx", "dep:tokio", "dep:reqwest", "dep:tower-http", "dep:moka"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matchit = "0.8"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
async-trait = "0.1"
base64 = "0.22"
urlencoding = "2.1"
hmac = "0.12"
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }

worker = { version = "0.7", features = ["d1"], optional = true }

axum = { version = "0.8", optional = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
moka = { version = "0.12", features = ["future"], optional = true }

[dev-dependencies]
serde_json = "1"
